--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,7 +42,7 @@ padding: 0px;
 
 .search_f{
 height: 35px;
-margin: 16px;
+margin: 15px;
 }
 
 .like{
@@ -59,4 +59,20 @@ margin: 5px;
 .tag{
 font-size: 150%;
 color: blue;
+}
+
+.new_question_input{
+    margin: 8px;
+width: 740px;
+}
+.new_question_t_area{
+    margin: 8px;
+width: 740px;
+height: 200px;
+resize: none;
+}
+
+.login{
+    width: 400px;
+    height: 50px;
 }
